headers/RadarKit/RKTest.h

typedef uint8_t RKTestFlag;
enum {
    RKTestFlagNone         = 0,
    RKTestFlagVerbose      = 1,
    RKTestFlagShowResults  = 1 << 1
};
typedef uint8_t RKTestSIMDFlag;
enum {
    RKTestSIMDFlagNull                       = 0,
    RKTestSIMDFlagShowNumbers                = 1,
    RKTestSIMDFlagPerformanceTestArithmetic  = 1 << 1,
    RKTestSIMDFlagPerformanceTestDuplicate   = 1 << 2,
    RKTestSIMDFlagPerformanceTestAll         = RKTestSIMDFlagPerformanceTestArithmetic | RKTestSIMDFlagPerformanceTestDuplicate
};
typedef uint8_t RKAxisAction;
enum {
    RKAxisActionStop,
    RKAxisActionSpeed,
    RKAxisActionPosition
};
typedef struct rk_test_transceiver {
    RKName         name;
    int            verbose;
    long           counter;

    int            sleepInterval;
    int            gateCapacity;
    int            gateCount;
    float          gateSizeMeters;
    double         fs;
    double         prt;
    RKByte         sprt;
    RKWaveform     *waveformCache[RKTestWaveformCacheCount];
    unsigned int   waveformCacheIndex;
	RKCommand      customCommand;
    bool           simFault;
    bool           transmitting;
    int            chunkSize;
    double         periodEven;
    double         periodOdd;
    long           ticEven;
    long           ticOdd;
    char           playbackFolder[RKMaximumFolderPathLength];
    RKFileHeader   fileHeaderCache;
    RKPulseHeader  pulseHeaderCache;

    pthread_t      tidRunLoop;
    RKEngineState  state;
    RKRadar        *radar;
    size_t         memoryUsage;
    char           response[RKMaximumStringLength];
} RKTestTransceiver;
typedef struct rk_test_pedestal {
    RKName         name;
    int            verbose;
    unsigned long  counter;

    float          azimuth;
    float          speedAzimuth;
    float          targetAzimuth;
    float          targetSpeedAzimuth;
    RKAxisAction   actionAzimuth;

    float          elevation;
    float          speedElevation;
    float          targetElevation;
    float          targetSpeedElevation;
    RKAxisAction   actionElevation;

    pthread_t      tidRunLoop;
    RKEngineState  state;
    RKRadar        *radar;
    size_t         memoryUsage;
    char           response[RKMaximumStringLength];
} RKTestPedestal;
typedef struct rk_test_health_relay {
    RKName         name;
    int            verbose;
    long           counter;

    pthread_t      tidRunLoop;
    RKEngineState  state;
    RKRadar        *radar;
    size_t         memoryUsage;
    char           response[RKMaximumStringLength];
} RKTestHealthRelay;
// Test functions

char *RKTestByNumberDescription(const int);
void RKTestByNumber(const int, const int, const void **);
void RKTestTerminalColors(void);
void RKTestPrettyStrings(void);
void RKTestBasicMath(void);
void RKTestParseCommaDelimitedValues(void);
void RKTestParseJSONString(void);
// File handling

void RKTestCountFiles(const char *);
void RKTestPreferenceReading(void);
// State machines

void RKTestFileManager(void);