python/radarkit/_ctypes_.py


struct_rk_radar.__slots__ = [
    'name',
    'desc',
    'state',
    'active',
    'memoryUsage',
    'processorCount',
    'tic',
    'mutex',
    'status',
    'configs',
    'healths',
    'positions',
    'pulses',
    'rays',
    'statusIndex',
    'configIndex',
    'healthIndex',
    'positionIndex',
    'pulseIndex',
    'rayIndex',
    'productIndex',
    'healthNodeCount',
    'healthNodes',
    'pulseClock',
    'positionClock',
    'fftModule',
    'healthEngine',
    'positionEngine',
    'steerEngine',
    'pulseEngine',
    'pulseRingFilterEngine',
    'momentEngine',
    'rawDataRecorder',
    'healthLogger',
    'sweepEngine',
    'fileManager',
    'radarRelay',
    'hostMonitor',
    'systemInspector',
    'waveform',
    'waveformDecimate',
    'filter',
    'transceiver',
    'transceiverInit',
    'transceiverExec',
    'transceiverFree',
    'transceiverInitInput',
    'transceiverResponse',
    'pedestal',
    'pedestalInit',
    'pedestalExec',
    'pedestalFree',
    'pedestalInitInput',
    'pedestalResponse',
    'healthRelay',
    'healthRelayInit',
    'healthRelayExec',
    'healthRelayFree',
    'healthRelayInitInput',
    'healthRelayResponse',
    'masterController',
    'masterControllerExec',
    'userDevices',
    'waveformCalibrations',
    'waveformCalibrationCount',
    'controls',
    'controlCount',
    'userModule',
    'userModuleInit',
    'userModuleFree',
]
struct_rk_radar._fields_ = [
    ('name', RKName),
    ('desc', RKRadarDesc),
    ('state', RKRadarState),
    ('active', c_bool),
    ('memoryUsage', c_size_t),
    ('processorCount', uint8_t),
    ('tic', uint64_t),
    ('mutex', pthread_mutex_t),
    ('status', POINTER(RKStatus)),
    ('configs', POINTER(RKConfig)),
    ('healths', POINTER(RKHealth)),
    ('positions', POINTER(RKPosition)),
    ('pulses', RKBuffer),
    ('rays', RKBuffer),
    ('statusIndex', uint32_t),
    ('configIndex', uint32_t),
    ('healthIndex', uint32_t),
    ('positionIndex', uint32_t),
    ('pulseIndex', uint32_t),
    ('rayIndex', uint32_t),
    ('productIndex', uint32_t),
    ('healthNodeCount', RKHealthNode),
    ('healthNodes', POINTER(RKNodalHealth)),
    ('pulseClock', POINTER(RKClock)),
    ('positionClock', POINTER(RKClock)),
    ('fftModule', POINTER(RKFFTModule)),
    ('healthEngine', POINTER(RKHealthEngine)),
    ('positionEngine', POINTER(RKPositionEngine)),
    ('steerEngine', POINTER(RKSteerEngine)),
    ('pulseEngine', POINTER(RKPulseEngine)),
    ('pulseRingFilterEngine', POINTER(RKPulseRingFilterEngine)),
    ('momentEngine', POINTER(RKMomentEngine)),
    ('rawDataRecorder', POINTER(RKRawDataRecorder)),
    ('healthLogger', POINTER(RKHealthLogger)),
    ('sweepEngine', POINTER(RKSweepEngine)),
    ('fileManager', POINTER(RKFileManager)),
    ('radarRelay', POINTER(RKRadarRelay)),
    ('hostMonitor', POINTER(RKHostMonitor)),
    ('systemInspector', POINTER(RKSimpleEngine)),
    ('waveform', POINTER(RKWaveform)),
    ('waveformDecimate', POINTER(RKWaveform)),
    ('filter', POINTER(RKIIRFilter)),
    ('transceiver', RKTransceiver),
    ('transceiverInit', CFUNCTYPE(UNCHECKED(RKTransceiver), POINTER(RKRadar), POINTER(None))),
    ('transceiverExec', CFUNCTYPE(UNCHECKED(c_int), RKTransceiver, String, String)),
    ('transceiverFree', CFUNCTYPE(UNCHECKED(c_int), RKTransceiver)),
    ('transceiverInitInput', POINTER(None)),
    ('transceiverResponse', c_char * int(4096)),
    ('pedestal', RKPedestal),
    ('pedestalInit', CFUNCTYPE(UNCHECKED(RKPedestal), POINTER(RKRadar), POINTER(None))),
    ('pedestalExec', CFUNCTYPE(UNCHECKED(c_int), RKPedestal, String, String)),
    ('pedestalFree', CFUNCTYPE(UNCHECKED(c_int), RKPedestal)),
    ('pedestalInitInput', POINTER(None)),
    ('pedestalResponse', c_char * int(4096)),
    ('healthRelay', RKHealthRelay),
    ('healthRelayInit', CFUNCTYPE(UNCHECKED(RKHealthRelay), POINTER(RKRadar), POINTER(None))),
    ('healthRelayExec', CFUNCTYPE(UNCHECKED(c_int), RKHealthRelay, String, String)),
    ('healthRelayFree', CFUNCTYPE(UNCHECKED(c_int), RKHealthRelay)),
    ('healthRelayInitInput', POINTER(None)),
    ('healthRelayResponse', c_char * int(4096)),
    ('masterController', RKMasterController),
    ('masterControllerExec', CFUNCTYPE(UNCHECKED(c_int), RKMasterController, String, String)),
    ('userDevices', RKUserDevice * int(RKHealthNodeCount)),
    ('waveformCalibrations', POINTER(RKWaveformCalibration)),
    ('waveformCalibrationCount', uint32_t),
    ('controls', POINTER(RKControl)),
    ('controlCount', uint32_t),
    ('userModule', RKUserModule),
    ('userModuleInit', CFUNCTYPE(UNCHECKED(RKUserModule), POINTER(RKWaveform))),
    ('userModuleFree', CFUNCTYPE(UNCHECKED(None), RKUserModule)),
]

RKTestFlag = uint8_t# headers/RadarKit/RKTest.h: 17

enum_anon_208 = c_int# headers/RadarKit/RKTest.h: 18

RKTestFlagNone = 0# headers/RadarKit/RKTest.h: 18

RKTestFlagVerbose = 1# headers/RadarKit/RKTest.h: 18

RKTestFlagShowResults = (1 << 1)# headers/RadarKit/RKTest.h: 18

RKTestSIMDFlag = uint8_t# headers/RadarKit/RKTest.h: 24

enum_anon_209 = c_int# headers/RadarKit/RKTest.h: 25

RKTestSIMDFlagNull = 0# headers/RadarKit/RKTest.h: 25

RKTestSIMDFlagShowNumbers = 1# headers/RadarKit/RKTest.h: 25

RKTestSIMDFlagPerformanceTestArithmetic = (1 << 1)# headers/RadarKit/RKTest.h: 25

RKTestSIMDFlagPerformanceTestDuplicate = (1 << 2)# headers/RadarKit/RKTest.h: 25

RKTestSIMDFlagPerformanceTestAll = (RKTestSIMDFlagPerformanceTestArithmetic | RKTestSIMDFlagPerformanceTestDuplicate)# headers/RadarKit/RKTest.h: 25

RKAxisAction = uint8_t# headers/RadarKit/RKTest.h: 33

enum_anon_210 = c_int# headers/RadarKit/RKTest.h: 34

RKAxisActionStop = 0# headers/RadarKit/RKTest.h: 34

RKAxisActionSpeed = (RKAxisActionStop + 1)# headers/RadarKit/RKTest.h: 34

RKAxisActionPosition = (RKAxisActionSpeed + 1)# headers/RadarKit/RKTest.h: 34

# headers/RadarKit/RKTest.h: 70
class struct_rk_test_transceiver(Structure):
    pass

struct_rk_test_transceiver.__slots__ = [
    'name',
    'verbose',
    'counter',
    'sleepInterval',
    'gateCapacity',
    'gateCount',
    'gateSizeMeters',
    'fs',
    'prt',
    'sprt',
    'waveformCache',
    'waveformCacheIndex',
    'customCommand',
    'simFault',
    'transmitting',
    'chunkSize',
    'periodEven',
    'periodOdd',
    'ticEven',
    'ticOdd',
    'playbackFolder',
    'fileHeaderCache',
    'pulseHeaderCache',
    'tidRunLoop',
    'state',
    'radar',
    'memoryUsage',
    'response',
]
struct_rk_test_transceiver._fields_ = [
    ('name', RKName),
    ('verbose', c_int),
    ('counter', c_long),
    ('sleepInterval', c_int),
    ('gateCapacity', c_int),
    ('gateCount', c_int),
    ('gateSizeMeters', c_float),
    ('fs', c_double),
    ('prt', c_double),
    ('sprt', RKByte),
    ('waveformCache', POINTER(RKWaveform) * int(2)),
    ('waveformCacheIndex', c_uint),
    ('customCommand', RKCommand),
    ('simFault', c_bool),
    ('transmitting', c_bool),
    ('chunkSize', c_int),
    ('periodEven', c_double),
    ('periodOdd', c_double),
    ('ticEven', c_long),
    ('ticOdd', c_long),
    ('playbackFolder', c_char * int(768)),
    ('fileHeaderCache', RKFileHeader),
    ('pulseHeaderCache', RKPulseHeader),
    ('tidRunLoop', pthread_t),
    ('state', RKEngineState),
    ('radar', POINTER(RKRadar)),
    ('memoryUsage', c_size_t),
    ('response', c_char * int(4096)),
]

RKTestTransceiver = struct_rk_test_transceiver# headers/RadarKit/RKTest.h: 70

# headers/RadarKit/RKTest.h: 94
class struct_rk_test_pedestal(Structure):
    pass

struct_rk_test_pedestal.__slots__ = [
    'name',
    'verbose',
    'counter',
    'azimuth',
    'speedAzimuth',
    'targetAzimuth',
    'targetSpeedAzimuth',
    'actionAzimuth',
    'elevation',
    'speedElevation',
    'targetElevation',
    'targetSpeedElevation',
    'actionElevation',
    'tidRunLoop',
    'state',
    'radar',
    'memoryUsage',
    'response',
]
struct_rk_test_pedestal._fields_ = [
    ('name', RKName),
    ('verbose', c_int),
    ('counter', c_ulong),
    ('azimuth', c_float),
    ('speedAzimuth', c_float),
    ('targetAzimuth', c_float),
    ('targetSpeedAzimuth', c_float),
    ('actionAzimuth', RKAxisAction),
    ('elevation', c_float),
    ('speedElevation', c_float),
    ('targetElevation', c_float),
    ('targetSpeedElevation', c_float),
    ('actionElevation', RKAxisAction),
    ('tidRunLoop', pthread_t),
    ('state', RKEngineState),
    ('radar', POINTER(RKRadar)),
    ('memoryUsage', c_size_t),
    ('response', c_char * int(4096)),
]

RKTestPedestal = struct_rk_test_pedestal# headers/RadarKit/RKTest.h: 94

# headers/RadarKit/RKTest.h: 106
class struct_rk_test_health_relay(Structure):
    pass

struct_rk_test_health_relay.__slots__ = [
    'name',
    'verbose',
    'counter',
    'tidRunLoop',
    'state',
    'radar',
    'memoryUsage',
    'response',
]
struct_rk_test_health_relay._fields_ = [
    ('name', RKName),
    ('verbose', c_int),
    ('counter', c_long),
    ('tidRunLoop', pthread_t),
    ('state', RKEngineState),
    ('radar', POINTER(RKRadar)),
    ('memoryUsage', c_size_t),
    ('response', c_char * int(4096)),
]

RKTestHealthRelay = struct_rk_test_health_relay# headers/RadarKit/RKTest.h: 106

# headers/RadarKit/RKTest.h: 110
if _libs["radarkit"].has("RKTestByNumberDescription", "cdecl"):
    RKTestByNumberDescription = _libs["radarkit"].get("RKTestByNumberDescription", "cdecl")
    RKTestByNumberDescription.argtypes = [c_int]
    if sizeof(c_int) == sizeof(c_void_p):
        RKTestByNumberDescription.restype = ReturnString
    else:
        RKTestByNumberDescription.restype = String
        RKTestByNumberDescription.errcheck = ReturnString

# headers/RadarKit/RKTest.h: 111
if _libs["radarkit"].has("RKTestByNumber", "cdecl"):
    RKTestByNumber = _libs["radarkit"].get("RKTestByNumber", "cdecl")
    RKTestByNumber.argtypes = [c_int, POINTER(None)]
    RKTestByNumber.restype = None

# headers/RadarKit/RKTest.h: 115
if _libs["radarkit"].has("RKTestTerminalColors", "cdecl"):
    RKTestTerminalColors = _libs["radarkit"].get("RKTestTerminalColors", "cdecl")
    RKTestTerminalColors.argtypes = []
    RKTestTerminalColors.restype = None

# headers/RadarKit/RKTest.h: 116
if _libs["radarkit"].has("RKTestPrettyStrings", "cdecl"):
    RKTestPrettyStrings = _libs["radarkit"].get("RKTestPrettyStrings", "cdecl")
    RKTestPrettyStrings.argtypes = []
    RKTestPrettyStrings.restype = None

# headers/RadarKit/RKTest.h: 117
if _libs["radarkit"].has("RKTestBasicMath", "cdecl"):
    RKTestBasicMath = _libs["radarkit"].get("RKTestBasicMath", "cdecl")
    RKTestBasicMath.argtypes = []
    RKTestBasicMath.restype = None

# headers/RadarKit/RKTest.h: 118
if _libs["radarkit"].has("RKTestParseCommaDelimitedValues", "cdecl"):
    RKTestParseCommaDelimitedValues = _libs["radarkit"].get("RKTestParseCommaDelimitedValues", "cdecl")
    RKTestParseCommaDelimitedValues.argtypes = []
    RKTestParseCommaDelimitedValues.restype = None

# headers/RadarKit/RKTest.h: 119
if _libs["radarkit"].has("RKTestParseJSONString", "cdecl"):
    RKTestParseJSONString = _libs["radarkit"].get("RKTestParseJSONString", "cdecl")
    RKTestParseJSONString.argtypes = []
    RKTestParseJSONString.restype = None

# headers/RadarKit/RKTest.h: 120
if _libs["radarkit"].has("RKTestFileManager", "cdecl"):
    RKTestFileManager = _libs["radarkit"].get("RKTestFileManager", "cdecl")
    RKTestFileManager.argtypes = []
    RKTestFileManager.restype = None

# headers/RadarKit/RKTest.h: 121
if _libs["radarkit"].has("RKTestPreferenceReading", "cdecl"):
    RKTestPreferenceReading = _libs["radarkit"].get("RKTestPreferenceReading", "cdecl")
    RKTestPreferenceReading.argtypes = []
    RKTestPreferenceReading.restype = None

# headers/RadarKit/RKTest.h: 122
if _libs["radarkit"].has("RKTestCountFiles", "cdecl"):
    RKTestCountFiles = _libs["radarkit"].get("RKTestCountFiles", "cdecl")
    RKTestCountFiles.argtypes = []
    RKTestCountFiles.restype = None
